인터페이스 빌더의 객체를 코드와 연결(IBOutlet)

--- a/부스트코스/ios 앱 프로그래밍/MusicPlayer/MusicPlayer/Base.lproj/Main.storyboard
+++ b/부스트코스/ios 앱 프로그래밍/MusicPlayer/MusicPlayer/Base.lproj/Main.storyboard
@@ -40,6 +40,11 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <connections>
+                        <outlet property="playPauseButton" destination="ZsQ-hz-8gW" id="x50-QA-0Uc"/>
+                        <outlet property="progressSlider" destination="166-Zv-jXh" id="9LW-Dh-VNk"/>
+                        <outlet property="timeLabel" destination="yz7-CZ-6Aw" id="0AW-rQ-j9T"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
